--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -17,3 +17,12 @@ section .collapsed.open {
 section .read-more {
   cursor: pointer;
 }
+
+.nav-link{
+  color: black;
+}
+
+.nav-link:hover{
+  color: grey;
+}
+
