--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,5 @@
-#map {
-    width: 100%;
-    height: 50vh;
-    border-radius: 10px;
-    margin: 1rem 0;
+
+.footer i:hover,
+.footer i:focus-visible{
+    opacity: 0.5;
 }
