--- a/CSS/product.css
+++ b/CSS/product.css
@@ -27,3 +27,23 @@
     top: 5%;
     left: 27%;
 }
+
+.title {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    text-decoration: none;
+    border-bottom: 1px solid rgb(224, 224, 224);
+    padding-bottom: 10px;
+}
+
+.border{
+    border: 1px solid rgb(211, 211, 211);
+    border-radius: 5px;
+    margin: 20px ;
+    padding: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1000px;
+}
