--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,29 +4,63 @@ header{
     margin: 0px;
     overflow: hidden;
 }
+
+
 .tophead {
-    background-image: url(/HTML_CSS_projektarbete/img/hund.jpg);
-    background-repeat: no-repeat;
-    background-size: 1200px 150px;
-    background-position: center;
-    text-align: center;
-    color: rgb(0, 0, 0);    
-    padding: 10px;
-   
+    /*background-image: url(/HTML_CSS_projektarbete/img/hund.jpg);*/
+    /*background-repeat: no-repeat;*/
+    /*background-size: 1200px 150px;*/
+    /*background-position: center;*/
+    text-align: center;  
+    padding: 10px;  
+
+    position: relative; 
+
 }
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.centered2{
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 
 body{
     background-color:rgb(255, 255, 255);
 }
 
 h3{
-    text-align: center;
+  text-align: center;
+}
+
+.responsive{
+  max-width: 90%;
+  max-height: auto;
+}
+
+@media only screen and(max-width:480px){
+  img{
+    width: 90%;
+  }
+}
+
+.container{
+  margin-inline: auto;
+  width: min(90%z 70.5rem);
 }
 
 /* IMG SLIDER */
 
 .carousel-container{
-  width: 30%;
+  width: 500px;
+  height: 400px;
   margin: auto;
   overflow: hidden;
   border:  10px solid #F8F9FA;  
