--- a/CSS/product.css
+++ b/CSS/product.css
@@ -45,5 +45,24 @@
     padding: 5px;
     margin-left: auto;
     margin-right: auto;
-    width: 1000px;
+    width:90%;
+}
+
+.img-text a{
+    text-align: center;
+    text-decoration: none;
+    color: #000000;
+    font-family: 'Garamond';
+}
+
+.img-text a:hover {
+    color: rgb(182, 182, 182);
+}
+
+.img-text p {
+    text-align: center;
+    font-size: 16px;
+    color: #000000;
+    font-family: 'Garamond';
+    margin-top: 20px;
 }
