--- a/CSS/product.css
+++ b/CSS/product.css
@@ -66,3 +66,12 @@
     font-family: 'Garamond';
     margin-top: 20px;
 }
+
+.img-border{
+    border: 1px solid rgb(211, 211, 211);
+    border-radius: 3px;
+    margin: 30px;
+    padding: 25px;
+    margin-left: auto;
+    margin-right: auto;
+}
