--- a/css/allstyle.css
+++ b/css/allstyle.css
@@ -17,3 +17,10 @@ article{
         height: auto;
     } 
 }
+.footer i{
+    opacity: 0.7;
+}
+.footer i:hover,
+.footer i:focus-visible{
+    opacity: 1;
+}
