--- a/CSS/style.css
+++ b/CSS/style.css
@@ -105,6 +105,19 @@ h3{
   justify-content: center;
 }
 
+.footer i{
+  opacity: 0.7;
+}
+.footer i:hover,
+.footer i:focus-visible{
+  opacity: 1;
+}
+.footer {
+  position: absolute;
+  bottom: 1;
+  width: 100%;
+}
+
 /*@media only screen and(max-width:480px){
   img{
     width: 90%;
