--- a/CSS/allstyle.css
+++ b/CSS/allstyle.css
@@ -30,6 +30,10 @@ section{
   .split{
     flex-direction: row;
   }
+  .split img{
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .split > *{
@@ -129,44 +133,5 @@ h3{
   width: min(90%z 70.5rem);
 }
 
-/* IMG SLIDER */
 
-.carousel-container{
-  width: 500px;
-  height: 400px;
-  margin: auto;
-  overflow: hidden;
-  border:  10px solid #F8F9FA;  
-  position: relative;
-}
-
-.carousel-slide{
-  display: flex;
-  width: 100%;
-  height: 400px;
-}
-
-/*BUTTON*/
-
-#prevBtn{
-  position: absolute;
-  top: 50%;
-  z-index: 10;
-  left: 5%;
-  font-size: 30px;
-  color: white;
-  opacity: 0.9;
-  cursor: pointer;
-}
-
-#nextBtn{
-  position: absolute;
-  top: 50%;
-  z-index: 10;
-  right: 5%;
-  font-size: 30px;
-  color: white;
-  opacity: 0.9;
-  cursor: pointer;
-}
 
