--- a/css/contact.css
+++ b/css/contact.css
@@ -8,6 +8,17 @@
     width: 100%;
     border-radius: 10px;
     aspect-ratio: 3 / 2;
+    transition: all 500ms ease-in;
+    animation: map-load 1000ms;
+    filter: drop-shadow(3px 3px 3px grey);
+}
+@keyframes map-load {
+    0%{
+        transform: scale(0.7);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 .content{
     max-width: 100rem;
@@ -37,6 +48,7 @@
 }
 .form-grid input{
     width: 95%;
+    filter: drop-shadow(3px 3px 3px grey);
 }
 .form-msg {
     grid-column: span 2;
@@ -44,6 +56,7 @@
 .form-grid textarea{
     width: 100%;
     height: 10rem;
+    filter: drop-shadow(3px 3px 3px grey);
 }
 
 .form-btn > *{
@@ -52,9 +65,10 @@
     color: white;
     padding: 0.25rem 1rem;
     margin: 1rem;
+    opacity: 0.85;
 }
-.form-btn button:hover{
-    opacity: 0.8;
+.form-btn button:hover, .form-btn button:focus-visible{
+    opacity: 1;
 }
 @media (max-width: 1000px){
     .form-grid > *{
